[gd_scene load_steps=4 format=3 uid="uid://c8vvg6ytnvny7"]

[ext_resource type="Script" path="res://Scripts/random_direction_fish_test.gd" id="1_xilse"]
[ext_resource type="PackedScene" uid="uid://cbmn5ebnidmlr" path="res://Scenes/Fishs/Fish_Nemo.tscn" id="2_nw2lo"]

[sub_resource type="Curve2D" id="Curve2D_g0dty"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 384, 0, 0, 0, 0, 1920, 384, 0, 0, 0, 0, 1920, 1080, 0, 0, 0, 0, 0, 1080, 0, 0, 0, 0, 0, 384, 0, 0, 0, 0, 0, 384)
}
point_count = 6

[node name="Node" type="Node"]
script = ExtResource("1_xilse")
Fish_scene = ExtResource("2_nw2lo")

[node name="BackGroundColor" type="ColorRect" parent="."]
offset_top = 380.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0757176, 0.547521, 0.407538, 1)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_g0dty")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(0, 980.977)
rotation = -1.5708
progress = 4635.03

[node name="SpawnTimer_Nemo" type="Timer" parent="."]
wait_time = 0.5

[node name="AreaDeColisao" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaDeColisao"]
build_mode = 1
polygon = PackedVector2Array(-72, 433, 203, 433, 1068, 440, 2031, 436, 2147, 255, 1958, 411, 1364, 410, 661, 415, 153.505, 412.1, -39, 411, 6, 376, 388, 379, 1211, 379, 1921, 380, 1977, 377, 2149, 255, 1898, 160, 1016, 164, -5, 191, -249, 206, -275, 330)

[connection signal="timeout" from="SpawnTimer_Nemo" to="." method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="AreaDeColisao" to="." method="_on_area_2d_body_entered"]
